qc pass: ppp over tcp without sack
---------------------------------- 2025-10-23 12:19:25 25.10.23
qc pass: ppp over tcp with sack
qc pass: ppp over tcp with asymmetric sack
qc pass: ppp over tcp with ecn
qc pass: ppp over tcp without ecn
qc pass: ppp over tcp with timestamp
qc pass: ppp over tcp without timestamp
---------------------------------- 2025-10-23 14:50:01 25.10.23
qc pass: ppp over tcp with winscale
qc pass: ppp over tcp without winscale
---------------------------------- 2025-11-02 11:34:59 25.11.2
no todo: mpls inband performance measurement
no todo: ioam as rfc9452
---------------------------------- 2025-11-02 12:10:00 25.11.2
qc pass: ldp with entropy label
qc pass: ldp with alternate marking
---------------------------------- 2025-11-05 16:12:20 25.11.5
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-11-05 17:55:31 25.11.5
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-11-06 17:19:30 25.11.6
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-11-06 19:17:04 25.11.6
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-11-09 08:42:27 25.11.9
qc pass: erspan server
---------------------------------- 2025-11-09 09:19:42 25.11.9
qc pass: sreth server
---------------------------------- 2025-11-09 10:01:54 25.11.9
qc pass: capwap server
qc pass: lwapp server
---------------------------------- 2025-11-13 06:03:31 25.11.13
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-11-13 06:44:02 25.11.13
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-11-24 20:00:45 25.11.24
qc pass: ipv4-ipv6 unicast translation
qc pass: ipv4-ipv6 multicast translation