@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.4-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-04 14:07:26, took 00:09:51, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-12-04 15:00:21, took 00:12:43, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
