@@ -17661,3 +17661,6 @@ qc pass: wireguard over asymmetric ports
 ---------------------------------- 2025-11-24 20:00:45 25.11.24
 qc pass: ipv4-ipv6 unicast translation
 qc pass: ipv4-ipv6 multicast translation
+---------------------------------- 2025-12-04 14:29:14 25.12.4
+no qc pass: wireguard over asymmetric ports
+failed: wireguard over asymmetric ports
